# polars-transformation-engine

./: README.md  example_connectors_commands.txt  pyproject.toml
infrastructure/: register_broker_topics.sh
infrastructure/docker/local/: docker-compose.yml
libs/configurations/: config_base.py  kafka_config.py  redis_config.py
libs/data_structures/: entity_types.py
libs/modules/consumers/: triggers_reader.py
libs/modules/events/: queue.py  triggers_handler.py
libs/modules/validators/: trigger_validator.py
libs/modules/writers/deltalake/: transform_from_cached.py  write_to_delta.py
libs/modules/writers/hotdata/: README.TXT
libs/modules/writers/iceberg/: README.TXT
libs/repository/database/: memory.py
libs/triggers/: event_type.py  mellishops.py  vtex.py
libs/utils/: utils.py
polars_transformation_engine/: main.py
